--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             <div class="text">This is some subtext under and illustration or image</div>
         </div>
     </div>
-    <div></div>
+    <div class="quote">
+        <em>Imagination is more important than knowledge. Knowledge is limited; imagination encircles the world. - Albert Einstein</em>
+    </div>
     <div class="footer">
         <p>Copyright @ The Odin Project 2024</p>
     </div>
