--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
     <div class="quote">
         <em>Imagination is more important than knowledge. Knowledge is limited; imagination encircles the world. - Albert Einstein</em>
     </div>
+    <div class="blank">
+        <div class="blue-rectangle">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for out product by clicking that button right over there!</p>
+        </div>
+    </div>
     <div class="footer">
         <p>Copyright @ The Odin Project 2024</p>
     </div>
