--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="awesome">
         <div class="first-left">
-            <h1>This website is awesome</h1>
+            <h1 class="bigtext">This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button type="button">Sign up!</button>
         </div>
@@ -53,8 +53,13 @@
     </div>
     <div class="blank">
         <div class="blue-rectangle">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for out product by clicking that button right over there!</p>
+            <div class="left">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for out product by clicking that button right over there!</p>
+            </div>
+            <div class="right">
+                <button type="button">Sign up!</button>
+            </div>
         </div>
     </div>
     <div class="footer">
