--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     </div>
     <div class="blank">
         <div class="blue-rectangle">
-            <div class="left">
+            <div class="blue-left">
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for out product by clicking that button right over there!</p>
             </div>
-            <div class="right">
+            <div class="blue-right">
                 <button type="button">Sign up!</button>
             </div>
         </div>
